Updated ClinicManagementApp, PatientDAO, and PatientDashboard